fix: add explore

--- a/notebooks/explore.ipynb
+++ b/notebooks/explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "1fe4ded7-416e-4d57-a3a8-6fbcce787e0c",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "742f643d",
    "metadata": {},
    "outputs": [],
@@ -32,12 +32,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "268129af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('../../data/raw/de_challenge_sample_data.csv')"
+    "data = pd.read_csv('../kafka_producer/data/raw/de_challenge_sample_data.csv')"
    ]
   },
   {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "818c04e7",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "672392f7",
    "metadata": {},
    "outputs": [
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "1d0f1502",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,55 +369,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "0397f2cc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([True, False, nan], dtype=object)"
+       "30"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.patrolled.unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "6975a096",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['wikidatawiki', 'nlwiki', 'jawiki', 'itwiki', 'eswiki', 'enwiki',\n",
-       "       'ltwiki', 'arzwiki', 'zhwiki', 'enwiktionary', 'dewiki',\n",
-       "       'commonswiki', 'arwiki', 'svwiki', 'huwiki', 'frwiki', 'urwiki',\n",
-       "       'simplewiki', 'viwiki', 'cswiki', 'ukwiki', 'ruwiki', 'mkwiki',\n",
-       "       'bawiki', 'ruwiktionary', 'plwiki', 'mlwiki', 'ptwiki',\n",
-       "       'mediawikiwiki', 'zh_yuewiki', 'cawiki', 'kawiki', 'hewiki',\n",
-       "       'be_x_oldwiki', 'frwikisource', 'lvwiki', 'dawiki', 'itwiktionary',\n",
-       "       'eowiki', 'metawiki', 'idwiki', 'afwiki', 'frwiktionary', 'fawiki',\n",
-       "       'srwiki', 'bgwiki', 'tawiki', 'diqwiki', 'ruwikinews', 'wawiki',\n",
-       "       'hrwiki', 'azwiki', 'fiwiki', 'enwikisource', 'trwiki', 'rowiki',\n",
-       "       'cebwiki', 'nlwikibooks', 'tewiki', 'skwiki', 'nowiki',\n",
-       "       'hiwikisource', 'nnwiki'], dtype=object)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.wiki.unique()"
+    "len(data.columns) # number of columns"
    ]
   },
   {
@@ -448,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "882aaf90",
    "metadata": {},
    "outputs": [
@@ -458,7 +426,7 @@
        "array(['edit'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,20 +452,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "302b3d0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "bot\n",
        "False    724\n",
        "True     276\n",
-       "Name: count, dtype: int64"
+       "Name: bot, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,24 +474,51 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "84871a26",
+   "metadata": {},
+   "source": [
+    "## 3.3 `wiki`\n",
+    "\n",
+    "Assumption:\n",
+    "- 'bot' seemed to be a column which may allow to create a topic for each type of wiki.\n",
+    "\n",
+    "Result:\n",
+    "- Can be used to create a topic for each wiki. 63 in total."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "id": "344f888c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['/mediawiki/recentchange/1.0.0'], dtype=object)"
+       "(array(['wikidatawiki', 'nlwiki', 'jawiki', 'itwiki', 'eswiki', 'enwiki',\n",
+       "        'ltwiki', 'arzwiki', 'zhwiki', 'enwiktionary', 'dewiki',\n",
+       "        'commonswiki', 'arwiki', 'svwiki', 'huwiki', 'frwiki', 'urwiki',\n",
+       "        'simplewiki', 'viwiki', 'cswiki', 'ukwiki', 'ruwiki', 'mkwiki',\n",
+       "        'bawiki', 'ruwiktionary', 'plwiki', 'mlwiki', 'ptwiki',\n",
+       "        'mediawikiwiki', 'zh_yuewiki', 'cawiki', 'kawiki', 'hewiki',\n",
+       "        'be_x_oldwiki', 'frwikisource', 'lvwiki', 'dawiki', 'itwiktionary',\n",
+       "        'eowiki', 'metawiki', 'idwiki', 'afwiki', 'frwiktionary', 'fawiki',\n",
+       "        'srwiki', 'bgwiki', 'tawiki', 'diqwiki', 'ruwikinews', 'wawiki',\n",
+       "        'hrwiki', 'azwiki', 'fiwiki', 'enwikisource', 'trwiki', 'rowiki',\n",
+       "        'cebwiki', 'nlwikibooks', 'tewiki', 'skwiki', 'nowiki',\n",
+       "        'hiwikisource', 'nnwiki'], dtype=object),\n",
+       " 63)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[\"$schema\"].unique()"
+    "data.wiki.unique(), len(data.wiki.unique())"
    ]
   }
  ],
@@ -544,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
